recipes/src/components/recipeList/recipecard.scss
.media {
    height: 0;
    padding-top: 56.25%; // 16:9
}

.card__actions {
    display: flex;
    align-items: center;
    justify-content: space-between;
    margin: auto;
}

.card__actions div {
    display: flex;
    flex-wrap: nowrap;
    justify-content: center;
}

